[gd_scene load_steps=46 format=4 uid="uid://dwy57xveerdgg"]

[ext_resource type="Shader" uid="uid://b60r2amiolhbm" path="res://Menu_/Pass.gdshader" id="1_2hxjc"]
[ext_resource type="Texture2D" uid="uid://bh0dqgsy415eu" path="res://images/Walk_Anim-0.png" id="2_4d7sh"]
[ext_resource type="Script" uid="uid://jwy1c1hbm5ms" path="res://Menu_/texture_rect_Animation.gd" id="2_ebxd8"]
[ext_resource type="Script" uid="uid://cciwmqvuv5tkr" path="res://Lavel_1/character_body_2d.gd" id="2_ir8iy"]
[ext_resource type="Shader" uid="uid://by2tk8dvhhcvr" path="res://Efeitos/Demage_Shake.gdshader" id="2_k73cj"]
[ext_resource type="Texture2D" uid="uid://0yk4lt2hbmwo" path="res://images/Walk_Anim-1.png" id="3_ir8iy"]
[ext_resource type="Texture2D" uid="uid://ddthfbxmv0ny8" path="res://images/Walk_Anim-2.png" id="4_hqns4"]
[ext_resource type="Texture2D" uid="uid://c2xbpm3nivlt5" path="res://images/Walk_Anim-3.png" id="5_x0ka3"]
[ext_resource type="Texture2D" uid="uid://m7oc1fh54t53" path="res://images/Walk_Anim-4.png" id="6_0h7mo"]
[ext_resource type="Texture2D" uid="uid://dktx6glgqbw3y" path="res://images/Walk_Anim-5.png" id="7_nr8wp"]
[ext_resource type="Texture2D" uid="uid://dieh343uqu075" path="res://images/Walk_Anim-6.png" id="8_d2bti"]
[ext_resource type="Script" uid="uid://bo6orxf6fke7v" path="res://Lavel_1/camera_2d.gd" id="9_4d7sh"]
[ext_resource type="Texture2D" uid="uid://bkeieiu7fuueh" path="res://PunchAnim/Punch_Anim-1.png" id="10_ta5nu"]
[ext_resource type="Texture2D" uid="uid://dmqmlx74mit2m" path="res://PunchAnim/Punch_Anim-2.png" id="11_flf07"]
[ext_resource type="Script" uid="uid://cgx2itbrs7oht" path="res://Lavel_1/enemy.gd" id="12_0h7mo"]
[ext_resource type="Texture2D" uid="uid://xah5i74roh0s" path="res://PunchAnim/Punch_Anim-3.png" id="12_k73cj"]
[ext_resource type="Texture2D" uid="uid://d88li0tijgxm" path="res://PunchAnim/Punch_Anim-0.png" id="13_flf07"]
[ext_resource type="Texture2D" uid="uid://uhtdenhafwfx" path="res://Efeitos/pngtree-2d-illustration-of-the-green-cross-sign-photo-picture-image_2864213-removebg-preview.png" id="15_gt76g"]
[ext_resource type="Texture2D" uid="uid://7evtbgo2rqgw" path="res://Efeitos/Black-Shadow-PNG-Picture.png" id="16_1fr6y"]
[ext_resource type="Texture2D" uid="uid://ddcaceo8n0pqo" path="res://images/Enemy/Enemy_Walk1.png" id="16_bjha6"]
[ext_resource type="Script" uid="uid://dwrh2q4u5nmtg" path="res://Lavel_1/enemy_shooter.gd" id="16_flf07"]
[ext_resource type="Texture2D" uid="uid://chk6gja68wiy7" path="res://images/Provisor.png" id="16_ta5nu"]
[ext_resource type="Texture2D" uid="uid://dl044ffuk45xr" path="res://images/Enemy/Enemy_Walk2.png" id="17_gt76g"]
[ext_resource type="Texture2D" uid="uid://ccwt0b78splnh" path="res://images/Enemy/Enemy_Walk3.png" id="18_1fr6y"]
[ext_resource type="Texture2D" uid="uid://bum6sua501tly" path="res://images/Enemy/Enemy_Walk4.png" id="19_2hxjc"]
[ext_resource type="Texture2D" uid="uid://uqdk5c4mky1b" path="res://images/Enemy/Enemy_Walk5.png" id="20_ebxd8"]
[ext_resource type="Texture2D" uid="uid://ccf16spx5pih8" path="res://images/Enemy/Enemy_Walk6.png" id="21_2u7jv"]
[ext_resource type="Texture2D" uid="uid://ba2yrds2k6wng" path="res://images/Enemy/Enemy_Walk7.png" id="22_24dk6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2u7jv"]
shader = ExtResource("1_2hxjc")
shader_parameter/size = 25.0
shader_parameter/color1 = Color(0.25098, 0, 0.0196078, 1)
shader_parameter/color2 = Color(0.4, 0.0156863, 0.0431373, 1)
shader_parameter/speed = 1.0
shader_parameter/direction_x = 1.0
shader_parameter/direction_y = 1.0

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_24dk6"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_2hxjc"]
vertices = PackedVector2Array(891.5, 494.797, 894.281, 515, 835.438, 514.75, 834.789, 495.258, 417.93, 498.633, 10.1875, 501.906, 17.8203, 90, 1358, 90, 1358, 758, 10, 758, 10, 642, 994, 642, 994, 493.977, 478, 522, 558, 522, 558, 562, 354, 621.977, 622, 562, 622, 577, 658, 577, 658, 562, 737.758, 562, 973, 621.008, 973, 515, 354, 522, 412.148, 522, 423.133, 510.992, 478, 498.141, 738.773, 520.43)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(7, 8, 11, 12), PackedInt32Array(13, 14, 15, 16), PackedInt32Array(15, 17, 18, 16), PackedInt32Array(19, 20, 21, 22), PackedInt32Array(1, 23, 22), PackedInt32Array(16, 24, 25), PackedInt32Array(26, 4, 7, 27), PackedInt32Array(22, 21, 28, 2, 1), PackedInt32Array(7, 12, 0), PackedInt32Array(7, 0, 3, 27), PackedInt32Array(25, 26, 27, 13, 16), PackedInt32Array(22, 16, 18, 19)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, 768, 0, 632, 1368, 632, 1368, 768), PackedVector2Array(1368, 632, 1368, 80, 984, 80, 984, 632), PackedVector2Array(984, 80, 8, 80, 0, 512, 992, 504), PackedVector2Array(416, 504, 408, 512, 344, 512, 344, 632, 983, 631, 983, 505, 903, 505, 902, 497, 832, 496, 831, 505, 729, 511, 728, 552, 648, 552, 648, 567, 632, 567, 632, 552, 568, 552, 568, 512, 488, 512, 488, 496, 416, 496)])

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_flf07"]
radius = 40.0
height = 152.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rjqkl"]
resource_local_to_scene = true
shader = ExtResource("2_k73cj")
shader_parameter/hit_effect = 0.0
shader_parameter/shake_intensity = 20.0
shader_parameter/flash_speed = 30.0
shader_parameter/flash_color = Color(1, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_ta5nu"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("2_4d7sh")
}, {
"duration": 0.5,
"texture": ExtResource("3_ir8iy")
}, {
"duration": 0.5,
"texture": ExtResource("4_hqns4")
}, {
"duration": 0.5,
"texture": ExtResource("5_x0ka3")
}, {
"duration": 0.5,
"texture": ExtResource("6_0h7mo")
}, {
"duration": 0.5,
"texture": ExtResource("7_nr8wp")
}, {
"duration": 0.5,
"texture": ExtResource("8_d2bti")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_flf07"]
animations = [{
"frames": [{
"duration": 0.2,
"texture": ExtResource("2_4d7sh")
}, {
"duration": 0.2,
"texture": ExtResource("10_ta5nu")
}, {
"duration": 0.2,
"texture": ExtResource("11_flf07")
}, {
"duration": 0.2,
"texture": ExtResource("12_k73cj")
}, {
"duration": 0.2,
"texture": ExtResource("11_flf07")
}, {
"duration": 0.2,
"texture": ExtResource("10_ta5nu")
}, {
"duration": 0.2,
"texture": ExtResource("13_flf07")
}],
"loop": false,
"name": &"Punch",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0h7mo"]
size = Vector2(17, 49)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0h7mo"]
radius = 18.0
height = 72.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mryly"]
shader = ExtResource("2_k73cj")
shader_parameter/hit_effect = 0.0
shader_parameter/shake_intensity = 10.0
shader_parameter/flash_speed = 30.0
shader_parameter/flash_color = Color(1, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_kq1c5"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("16_bjha6")
}, {
"duration": 0.5,
"texture": ExtResource("17_gt76g")
}, {
"duration": 0.5,
"texture": ExtResource("18_1fr6y")
}, {
"duration": 0.5,
"texture": ExtResource("19_2hxjc")
}, {
"duration": 0.5,
"texture": ExtResource("20_ebxd8")
}, {
"duration": 0.5,
"texture": ExtResource("21_2u7jv")
}, {
"duration": 0.5,
"texture": ExtResource("22_24dk6")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flf07"]
size = Vector2(11, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ta5nu"]
size = Vector2(200, 248)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gt76g"]
radius = 9.0
height = 38.0

[sub_resource type="SpriteFrames" id="SpriteFrames_1fr6y"]
animations = [{
"frames": [{
"duration": 0.6,
"texture": ExtResource("16_bjha6")
}, {
"duration": 0.6,
"texture": ExtResource("17_gt76g")
}, {
"duration": 0.6,
"texture": ExtResource("18_1fr6y")
}, {
"duration": 0.6,
"texture": ExtResource("19_2hxjc")
}, {
"duration": 0.6,
"texture": ExtResource("20_ebxd8")
}, {
"duration": 0.6,
"texture": ExtResource("21_2u7jv")
}, {
"duration": 0.6,
"texture": ExtResource("22_24dk6")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2hxjc"]
texture = ExtResource("16_ta5nu")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0

[sub_resource type="TileSet" id="TileSet_ebxd8"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2hxjc")

[node name="Node2D" type="Node2D"]

[node name="Background_Menu" type="TextureRect" parent="."]
z_index = -5
texture_filter = 1
texture_repeat = 3
material = SubResource("ShaderMaterial_2u7jv")
offset_left = -176.0
offset_top = 32.0
offset_right = 8.0
offset_bottom = 103.0
scale = Vector2(11.666, 22.2905)
pivot_offset = Vector2(20.8205, 19.7014)
texture = SubResource("CurveXYZTexture_24dk6")
expand_mode = 1
script = ExtResource("2_ebxd8")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_2hxjc")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(648, 488)
scale = Vector2(0.5, 0.5)
motion_mode = 1
script = ExtResource("2_ir8iy")
metadata/Class = "Player"

[node name="Hurtbox" type="CollisionShape2D" parent="Player"]
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_flf07")

[node name="BodySprite" type="AnimatedSprite2D" parent="Player"]
material = SubResource("ShaderMaterial_rjqkl")
position = Vector2(3.63798e-12, -1.43051e-06)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ta5nu")
animation = &"Walk"
frame = 4
frame_progress = 0.272486

[node name="ArmSprite" type="AnimatedSprite2D" parent="Player"]
rotation = 1.57079
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_flf07")
animation = &"Punch"

[node name="Hitbox_Area" type="Area2D" parent="Player"]
position = Vector2(35, 0)

[node name="Hitbox" type="CollisionShape2D" parent="Player/Hitbox_Area"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_0h7mo")
disabled = true
debug_color = Color(0.956989, 0.154562, 0.359347, 0.42)

[node name="Marker2D" type="Marker2D" parent="Player"]
position = Vector2(36, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(648, 488)
zoom = Vector2(1.8, 1.8)
position_smoothing_enabled = true
script = ExtResource("9_4d7sh")
metadata/Class = "Player"

[node name="Sh_Layer" type="CanvasLayer" parent="Camera2D"]

[node name="Shadow" type="Sprite2D" parent="Camera2D/Sh_Layer"]
position = Vector2(684, 383.5)
scale = Vector2(1.33594, 0.749023)
texture = ExtResource("16_1fr6y")

[node name="Health_Layer" type="CanvasLayer" parent="Camera2D"]

[node name="Health_Label" type="Label" parent="Camera2D/Health_Layer"]
modulate = Color(0.440778, 0.622414, 0.263824, 1)
offset_left = 64.0
offset_top = 632.0
offset_right = 192.0
offset_bottom = 715.0
theme_override_font_sizes/font_size = 60
text = "100"
horizontal_alignment = 1

[node name="Health_Img" type="Sprite2D" parent="Camera2D/Health_Layer/Health_Label"]
position = Vector2(8, 11)
scale = Vector2(0.0415832, 0.0469999)
texture = ExtResource("15_gt76g")

[node name="Enemy_Runner" type="CharacterBody2D" parent="."]
position = Vector2(816, 352)
script = ExtResource("12_0h7mo")
metadata/Class = "Enemy"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Enemy_Runner"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Runner"]
rotation = -3.14159
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_0h7mo")

[node name="Enemy_Runner" type="AnimatedSprite2D" parent="Enemy_Runner"]
material = SubResource("ShaderMaterial_mryly")
rotation = 1.57079
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_kq1c5")
animation = &"Walk"
frame = 4
frame_progress = 0.76973

[node name="E_Area" type="Area2D" parent="Enemy_Runner"]
position = Vector2(21, 0)

[node name="E_Hitbox" type="CollisionShape2D" parent="Enemy_Runner/E_Area"]
shape = SubResource("RectangleShape2D_flf07")
debug_color = Color(0.968627, 0, 0.964706, 0.0941176)

[node name="D_Area" type="Area2D" parent="Enemy_Runner"]
position = Vector2(21, 0)

[node name="D_Hitbox" type="CollisionShape2D" parent="Enemy_Runner/D_Area"]
position = Vector2(63, 4)
shape = SubResource("RectangleShape2D_ta5nu")
debug_color = Color(0.841326, 0.515799, 0.061147, 0.0941176)

[node name="Enemy_Shooter" type="CharacterBody2D" parent="."]
position = Vector2(392, 356)
script = ExtResource("16_flf07")
shoot_cooldown = 0.5
lose_sight_delay = 3.0
metadata/Class = "Enemy"

[node name="Hurtbox_Enemy" type="CollisionShape2D" parent="Enemy_Shooter"]
rotation = -3.14159
shape = SubResource("CapsuleShape2D_gt76g")

[node name="Enemy_Shooter" type="AnimatedSprite2D" parent="Enemy_Shooter"]
rotation = 1.57079
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_1fr6y")
animation = &"Walk"

[node name="D_Area" type="Area2D" parent="Enemy_Shooter"]
position = Vector2(21, 0)

[node name="D_Hitbox" type="CollisionShape2D" parent="Enemy_Shooter/D_Area"]
position = Vector2(155, 0)
scale = Vector2(2, 0.7)
shape = SubResource("RectangleShape2D_ta5nu")
debug_color = Color(0.841326, 0.515799, 0.061147, 0.0941176)

[node name="Marker2D" type="Marker2D" parent="Enemy_Shooter"]
position = Vector2(21, 0)

[node name="Layer0" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAVACcAAAAAAAoAAAAWACcAAAAAAAoAAAAXACcAAAAAAAoAAAAYACcAAAAAAAoAAAAZACcAAAAAAAoAAAAaACcAAAAAAAoAAAAbACcAAAAAAAoAAAAcACcAAAAAAAoAAAAdACcAAAAAAAoAAAAeACcAAAAAAAoAAAAfACcAAAAAAAoAAAAgACcAAAAAAAoAAAAhACcAAAAAAAoAAAAiACcAAAAAAAoAAAAjACcAAAAAAAoAAAAkACcAAAAAAAoAAAAlACcAAAAAAAoAAAAmACcAAAAAAAoAAAAnACcAAAAAAAoAAAAoACcAAAAAAAoAAAApACcAAAAAAAoAAAAqACcAAAAAAAoAAAArACcAAAAAAAoAAAAsACcAAAAAAAoAAAAtACcAAAAAAAoAAAAuACcAAAAAAAoAAAAvACcAAAAAAAoAAAAwACcAAAAAAAoAAAAxACcAAAAAAAoAAAAyACcAAAAAAAoAAAAzACcAAAAAAAoAAAA0ACcAAAAAAAoAAAA1ACcAAAAAAAoAAAA2ACcAAAAAAAoAAAA3ACcAAAAAAAoAAAA4ACcAAAAAAAoAAAA5ACcAAAAAAAoAAAA6ACcAAAAAAAoAAAA7ACcAAAAAAAoAAAA8ACcAAAAAAAoAAAA9ACcAAAAAAAoAAAA9ACYAAAAAAAoAAAAVACYAAAAAAAoAAAAVACUAAAAAAAoAAAAVACQAAAAAAAoAAAAVACMAAAAAAAoAAAAVACIAAAAAAAoAAAAVACEAAAAAAAoAAAAVACAAAAAAAAoAAAAVAB8AAAAAAAoAAAAWAB8AAAAAAAoAAAAXAB8AAAAAAAoAAAAYAB8AAAAAAAoAAAAZAB8AAAAAAAoAAAAeAB8AAAAAAAoAAAAfAB8AAAAAAAoAAAAgAB8AAAAAAAoAAAAhAB8AAAAAAAoAAAAiAB8AAAAAAAoAAAAjAB8AAAAAAAoAAAAjACAAAAAAAAoAAAAjACEAAAAAAAoAAAAjACIAAAAAAAoAAAAkACIAAAAAAAoAAAAlACIAAAAAAAoAAAAmACIAAAAAAAoAAAAnACIAAAAAAAoAAAAoACIAAAAAAAoAAAApACIAAAAAAAoAAAAqACIAAAAAAAoAAAArACIAAAAAAAoAAAAsACIAAAAAAAoAAAAtACIAAAAAAAoAAAAtACEAAAAAAAoAAAAtACAAAAAAAAoAAAAtAB8AAAAAAAoAAAAuAB8AAAAAAAoAAAAvAB8AAAAAAAoAAAAwAB8AAAAAAAoAAAAxAB8AAAAAAAoAAAAyAB8AAAAAAAoAAAAzAB8AAAAAAAoAAAA4AB8AAAAAAAoAAAA5AB8AAAAAAAoAAAA6AB8AAAAAAAoAAAA7AB8AAAAAAAoAAAA8AB8AAAAAAAoAAAA9AB8AAAAAAAoAAAA9ACMAAAAAAAoAAAA9ACQAAAAAAAoAAAA9ACUAAAAAAAoAAAA9ACAAAAAAAAoAAAA9ACEAAAAAAAoAAAA9ACIAAAAAAAoAAAAoACMAAAAAAAoAAAAnACMAAAAAAAoAAAA=")
tile_set = SubResource("TileSet_ebxd8")

[connection signal="body_entered" from="Player/Hitbox_Area" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Enemy_Runner/E_Area" to="Enemy_Runner" method="_on_e_area_body_entered"]
[connection signal="body_entered" from="Enemy_Runner/D_Area" to="Enemy_Runner" method="_on_d_area_body_entered"]
[connection signal="body_exited" from="Enemy_Runner/D_Area" to="Enemy_Runner" method="_on_d_area_body_exited"]
[connection signal="body_entered" from="Enemy_Shooter/D_Area" to="Enemy_Shooter" method="_on_d_area_body_entered"]
[connection signal="body_exited" from="Enemy_Shooter/D_Area" to="Enemy_Shooter" method="_on_d_area_body_exited"]
